--- a/src/components/upcoming/upcoming.module.css
+++ b/src/components/upcoming/upcoming.module.css
@@ -1,20 +1,10 @@
 .rocket-card {
-  display: inline-block;
-  width: 60%;
-  border: 1px solid black;
-  padding: 0px 20px 20px 20px;
+  width: 17rem;
+  margin-top: 2rem;
 }
 
 .listing {
   display: inline;
-}
-
-.buttom-prev {
-  float: left;
-}
-
-.buttom-next {
-  float: right;
 }
 
 .header-rocket-list {
@@ -24,18 +14,7 @@
   text-align: center;
 }
 
-.footer-rocket-list {
-  padding: 0px 20px;
-  display: inline-block;
-  width: 60%;
-}
-
 .container {
   width: 20%;
   display: inline-block;
-}
-
-.link {
-  text-decoration: blink;
-  color: black;
 }
