--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+html {
+  height: 100%;
+}
+
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  padding: 20px;
+  min-height: 100%;
 }
